Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Dec-2011 Jean-Marie Simonet
 # Fixing again [#27520] lost when committing [#27498]
 # Fixing again [#27533] lost when committing [#27498]
 # Fixing again [#27510] lost when committing [#27498]
 
29-Dec-2011 Christophe Demko
 # [#27552] Bad character in Smart Search newsfeeds plug-in (Chris Davenport)

29-Dec-2011 Jean-Marie Simonet
 - [#27534] * regression : Message when trashing/publishing/etc. Revert #27257

28-Dec-2011 Jean-Marie Simonet
 # [#27498] Various Finder issues; Thanks all.
 $ [#27539] Finder / Smart Search language. Thanks Brian.
 # [#27447] Fix the use of several deprecated functions. Thanks Rouven and Andrea.

27-Dec-2011 Jean-Marie Simonet
 # [#27510] *Smart Search does not show up in filter
 # [#27533] Untranslated strings in Smart Search module. Thanks Chris.
 # [#27520] Smart Search Filter / Fx.Scroll. Thanks Benjamin

26-Dec-2011 Jean-Marie Simonet
 # [#27508] mod_status is mirroring incorrect in RTL admin panel. Thank Ofer.
 $ [#27493] Beez 5 has a Beez 2 language key. Thanks Ken.
 # [#26632] Inconsistent operation of user field type. Thanks Michael Richey.
 $ [#27516] Step 6 of Joomla 2.5b1 Installation CSS/Layout errors. Correcting sv-SE
 # [#27519] Setting a home menu item with language duplicates the menu. Thanks Christophe.

24-Dec-2011 Jean-Marie Simonet
 # [#26380] Menu items of different languages can't have same alias, menu items are cached for each user. Thanks Dennis

24-Dec-2011 Christophe Demko
 # [#26582] Recursive permanent deletion of nested categories (Denise McLaurin)
 ^ [#27351] Modify default permissions for Admin Group (Elin Waring)
 # [#26421] Add a context to JHtmlContent::prepare (Michael Babker)

23-Dec-2011 Christophe Demko
 # [#27491] Fix JFormFieldFilters (Rouven Weßling)
 # [#27492] SQL Date issue (Sudhi Seshachala)