@@ -40,6 +40,10 @@ class plgQuickiconExtensionupdate extends JPlugin
 	 */
 	public function onGetIcon()
 	{
+		if (!JFactory::getUser()->authorise('core.manage', 'com_installer')) {
+			return array();
+		}
+
 		$cur_template = JFactory::getApplication()->getTemplate();
 		$ajax_url = JURI::base().'index.php?option=com_installer&view=update&task=update.ajax';
 		$script = "var plg_quickicon_extensionupdate_ajax_url = '$ajax_url';\n";
@@ -55,7 +59,6 @@ class plgQuickiconExtensionupdate extends JPlugin
 			'link' => 'index.php?option=com_installer&view=update',
 			'image' => 'header/icon-48-extension.png',
 			'text' => JText::_('PLG_QUICKICON_EXTENSIONUPDATE_CHECKING'),
-			'access' => array('core.manage', 'com_installer'),
 			'id' => 'plg_quickicon_extensionupdate'
 		);
 	}
