@@ -41,6 +41,10 @@ class plgQuickiconJoomlaupdate extends JPlugin
 	 */
 	public function onGetIcon()
 	{
+		if (!JFactory::getUser()->authorise('core.manage', 'com_installer')) {
+			return array();
+		}
+
 		$cur_template = JFactory::getApplication()->getTemplate();
 		$ajax_url = JURI::base().'index.php?option=com_installer&view=update&task=update.ajax';
 		$script = "var plg_quickicon_joomlaupdate_ajax_url = '$ajax_url';\n";
@@ -61,7 +65,6 @@ class plgQuickiconJoomlaupdate extends JPlugin
 			'link' => 'index.php?option=com_installer&view=update',
 			'image' => 'header/icon-48-download.png',
 			'text' => JText::_('PLG_QUICKICON_JOOMLAUPDATE_CHECKING'),
-			'access' => array('core.manage', 'com_installer'),
 			'id' => 'plg_quickicon_joomlaupdate'
 		);
 	}
